--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 										<li><a href="https://public.tableau.com/app/profile/syed.taha.ahmed" class="button">View Projects</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/movies-correlation-project-in-python.ipynb">MOVIE CORRELATION WITH PYTHON</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/movies-correlation-project-in-python.ipynb" class="image fit"><img src="images/movies.jpg" alt="" /></a>
+									<p>In this project we look at what variables effecting the gross revenue of the movies.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/movies-correlation-project-in-python.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
