--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql">COVID 19<br />
+											DATA EXPLORATION (SQL)</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
+									<p>In this project we use SQL Server to explore global COVID-19 data.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://public.tableau.com/app/profile/syed.taha.ahmed">TABLEAU DASHBOARDS</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/syed.taha.ahmed" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
