--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql">COVID 19<br />
-											DATA EXPLORATION (SQL)</a></h2>
+										<h2><a href="https://github.com/syedtahahmed/TikTok-Project">TikTok Project</a></h2>
 									</header>
-									<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>In this project we use SQL Server to explore global COVID-19 data.</p>
+									<a href="https://github.com/syedtahahmed/TikTok-Project" class="image fit"><img src="images/TikTok.png" alt="" /></a>
+									<p>Claims Classification Project.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/COVID%20PortfolioProject%20Script.sql" class="button">View Project</a></li>
+										<li><a href="https://github.com/syedtahahmed/TikTok-Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
