--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql">Nashville Housing<br />
-										DATA CLEANING (SQL)</a></h2>
-									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
+									<h2><a href="https://github.com/syedtahahmed/Automatidata-Project">Automatidata Project</a></h2>
+									<p>Predicting Taxi Gratuities in New York City.</p>
 								</header>
-								<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql" class="image main"><img src="images/housing.jpg" alt="" /></a>
+								<a href="https://github.com/syedtahahmed/Automatidata-Project" class="image main"><img src="images/Automatidata.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/syedtahahmed/Automatidata-Project" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -70,6 +69,36 @@
 									<p>Claims Classification Project.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/syedtahahmed/TikTok-Project" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/syedtahahmed/Waze-Project">Waze Project</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/Waze-Project" class="image fit"><img src="images/Waze.png" alt="" /></a>
+									<p>Churn Prediction Project.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/Waze-Project" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/syedtahahmed/Salifort-Motors-Project">Salifort Motors Project</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/Salifort-Motors-Project" class="image fit"><img src="images/SFM.png" alt="" /></a>
+									<p>Employee Turnover Prediction Project.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/Salifort-Motors-Project" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql">Nashville Housing</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql" class="image fit"><img src="images/housing.jpg" alt="" /></a>
+									<p>In this project we take raw housing data and transform it in SQL Server to make it more usable for analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
