--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/syedtahahmed/Cyclistic-Project">Cyclistic Project</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/Cyclistic-Project" class="image fit"><img src="images/Cyclist.png" alt="" /></a>
+									<p>Business Intelligence project using BigQuery, DataFlow & Tableau.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/Cyclistic-Project" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/syedtahahmed/Google-Fiber-Project">Google Fiber Project</a></h2>
+									</header>
+									<a href="https://github.com/syedtahahmed/Google-Fiber-Project" class="image fit"><img src="images/Google Fiber.png" alt="" /></a>
+									<p>Business Intelligence project using BigQuery & Tableau.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/syedtahahmed/Google-Fiber-Project" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql">Nashville Housing</a></h2>
 									</header>
 									<a href="https://github.com/syedtahahmed/PortfolioProjects/blob/main/NashvilleHousingProject.sql" class="image fit"><img src="images/housing.jpg" alt="" /></a>
